--- a/index3.html
+++ b/index3.html
@@ -2,15 +2,25 @@
 <html> 
  <head>
     <title>FIrst Web Site</title>
-      <style>
-        body{
-            background-color: goldenrod;
-           
+    <link rel="stylesheet" href="/css/styles.css">
+    <style>
+        h1{ 
+            color:rgb(232, 101, 101);
+            text-align: center;
         }
-      </style>
+        p{
+            color: rgb(12, 12, 47);
+            text-align: center;
+        }
+        
+        div{
+            text-align: center;
+        }
+    </style>
  </head>
  <body>
     <header>
+      <nav>
         <ul>
             <li> <a href="#home">home</a></li>
             <li> <a href="#about">about</a></li>
@@ -18,6 +28,7 @@
             <li> <a href="#resume">resume</a></li>
             <li> <a href="#contact">contact</a></li>
         </ul>
+      </nav>  
     </header>
 
     <main>
@@ -43,7 +54,7 @@
                     I have two years of work experience, and i'm currently learning web development<br>
                     <a href="https://www.linkedin.com/">Nouha Rihani</a>
                 </p>
-                <img src="1.png" alt="teacher" width="400" height="300">
+                <img style=" border-radius: 50%" src="1.png" alt="teacher" width="400" height="300">
             </section>
             <section id="resume">
                 <h1>resume</h1>
@@ -60,7 +71,7 @@
             </section>
             <section id="contact">
                 <h1>contact</h1>
-                <table>
+                <table style=" border: 1px solid;" align="center">
                     <tr>
                         <td>name</td>
                         <td><input type="text" name="name" /></td>
