--- a/index3.html
+++ b/index3.html
@@ -59,7 +59,7 @@
             <section id="resume">
                 <h1>resume</h1>
                 <p>If you are a trainee teacher here are some tips for you!</p>
-                <ul>
+                <ul style="list-style-type: none;">
                     <li>Planning and organisation</li>
                     <li>Build a strong parent-teacher relationship</li>
                     <li>Know you subject</li>
